frontend/tests/cases/negative/hsup/pushManyOne.gr
pushManyOne : forall {a b : Type} . (a, b) [Many] -> (a [Many], b [One])
pushManyOne [(x, y)] = ([x], [y]) 